Fix branch graph rendering on safari

--- a/shared/common/branchGraph/branchGraph.module.scss
+++ b/shared/common/branchGraph/branchGraph.module.scss
@@ -308,7 +308,7 @@
   flex-direction: column;
   align-items: flex-start;
   min-width: max(64px, 100%);
-  width: max-content;
+  width: min-content;
 
   .line,
   .dot,
@@ -583,9 +583,7 @@
   flex-direction: column;
   border-radius: 12px 0 0 12px;
   background: var(--panel_background);
-  box-shadow:
-    0px 2px 8px rgba(0, 0, 0, 0.12),
-    0px 0px 2px rgba(0, 0, 0, 0.06);
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.12), 0px 0px 2px rgba(0, 0, 0, 0.06);
   z-index: 2;
 
   .closeButton {
